--- a/index.html
+++ b/index.html
@@ -1,50 +1,26 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ryoko Kino</title>
-  <link rel="stylesheet" href="/assets/style.css" />
-</head>
-<body>
-  <header class="site-header">
-    <div class="container">
-      <h1><a href="/">Ryoko Kino</a></h1>
-      <nav>
-        <a href="/cv/">CV</a>
-        <a href="/publications/">Publications</a>
-        <a href="/talk/">Talks</a>
-        <a href="/meeting/">Meeting</a>
-      </nav>
-    </div>
-  </header>
+---
+layout: default
+lang: ja
+title: Ryoko Kino's Home
+hreflang_ja: https://ryoko0710.github.io/
+hreflang_en: https://ryoko0710.github.io/en/
+---
 
-  <main class="container">
-    <section class="lead">
-      <p>Hypernuclear physics / Decay-pion spectroscopy / J-PARC & MAMI</p>
-      <p>RIKEN Special Postdoctoral Researcher (from Apr 2026), JSPS PD</p>
-      <p>Email: <span class="mono">ryoko.kino [at] riken.jp</span></p>
-    </section>
+<section>
+  <h2>Welcome to my home page!</h2>
+  <p>I'm Ryoko Kino（木野 量子）.</p>
 
-    <section>
-      <h2>News</h2>
-      <ul class="news">
-        <li><time>2025-10-04</time> Site migrated to GitHub Pages.</li>
-        <li><time>2025-09-30</time> HYP2025 talk, slides uploaded.</li>
-      </ul>
-    </section>
+  <h2>NEWS</h2>
+  <ul class="news">
+    <li><time>2025-09-12</time> <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a> にて ANPhA Award for Young Scientist を受賞しました。</li>
+    <li><time>2025-09-11</time> <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a> で招待講演を行いました。</li>
+    <li><time>2025-06-26</time> JSPS DC 最終年次 研究奨励金特別手当に採択されました。</li>
+    <li><time>2025-05-29</time> <a href="https://inpc2025.org" target="_blank" rel="noopener">INPC2025</a> で口頭発表を行いました。</li>
+    <li><time>2025-04-22</time> PRL 掲載（電子散乱による六重水素の基底状態エネルギー測定）。DOI: <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener">10.1103/PhysRevLett.134.162501</a></li>
+  </ul>
 
-    <section>
-      <h2>Research Interests</h2>
-      <p>
-        Spectroscopy of s-shell Λ hypernuclei, precision mass/lifetime measurement,
-        streaming DAQ & forward TOF (CapTOF), kaonic nuclei (K⁻pp, K⁰nn, …)
-      </p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">© Ryoko Kino</div>
-  </footer>
-</body>
-</html>
+  <h2>Research interest</h2>
+  <h3>In Progress</h3>
+  <p>ドイツ・マインツ大学 MAMI における弱崩壊パイ中間子分光実験によるハイパートライトン質量測定実験</p>
+  <p>東北大学 RARiS BM4 光子ビームラインにおける光子ビームプロファイルモニタリングシステムの開発</p>
+</section>
