Fix Pages: enable Jekyll, restore header/menu, set header background

--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@ hreflang_en: https://ryoko0710.github.io/en/
   <ul class="news">
     <li><time>2025-09-12</time> <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a> にて ANPhA Award for Young Scientist を受賞しました。</li>
     <li><time>2025-09-11</time> <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a> で招待講演を行いました。</li>
-    <li><time>2025-06-26</time> JSPS DC 最終年次 研究奨励金特別手当に採択されました。</li>
-    <li><time>2025-05-29</time> <a href="https://inpc2025.org" target="_blank" rel="noopener">INPC2025</a> で口頭発表を行いました。</li>
-    <li><time>2025-04-22</time> PRL 掲載（電子散乱による六重水素の基底状態エネルギー測定）。DOI: <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener">10.1103/PhysRevLett.134.162501</a></li>
+    <li><time>2025-06-26</time> JSPS DC 最終年次 研究奨励金特別手当に採択。</li>
+    <li><time>2025-05-29</time> <a href="https://inpc2025.org" target="_blank" rel="noopener">INPC2025</a> で口頭発表。</li>
+    <li><time>2025-04-22</time> PRL 掲載。DOI: <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener">10.1103/PhysRevLett.134.162501</a></li>
   </ul>
-
-  <h2>Research interest</h2>
-  <h3>In Progress</h3>
-  <p>ドイツ・マインツ大学 MAMI における弱崩壊パイ中間子分光実験によるハイパートライトン質量測定実験</p>
-  <p>東北大学 RARiS BM4 光子ビームラインにおける光子ビームプロファイルモニタリングシステムの開発</p>
 </section>
