Add sidebar profile on home pages (JA/EN)

--- a/en/index.html
+++ b/en/index.html
@@ -4,6 +4,7 @@ lang: en
 title: Ryoko Kino
 hreflang_ja: https://ryoko0710.github.io/
 hreflang_en: https://ryoko0710.github.io/en/
+sidebar: profile
 ---
 
 <section>
