--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ lang: ja
 title: Ryoko Kino's Home
 hreflang_ja: https://ryoko0710.github.io/
 hreflang_en: https://ryoko0710.github.io/en/
+sidebar: profile
 ---
 
 <section>
