Subpages: compact header (no awkward wrapping, larger text, overlay toned down)

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,3 +1,10 @@
+---
+layout: default
+lang: ja
+title: CV | Ryoko Kino
+header_size: small
+---
+
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>CV | Ryoko Kino</title><link rel="stylesheet" href="/assets/style.css">
