--- a/cv/index.html
+++ b/cv/index.html
@@ -5,26 +5,13 @@ title: CV | Ryoko Kino
 header_size: small
 ---
 
-<!DOCTYPE html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>CV | Ryoko Kino</title><link rel="stylesheet" href="/assets/style.css">
-</head><body>
-<header class="site-header"><div class="container">
-  <h1><a href="/">Ryoko Kino</a></h1>
-  <nav><a href="/cv/">CV</a><a href="/publications/">Publications</a><a href="/talk/">Talks</a><a href="/meeting/">Meeting</a></nav>
-</div></header>
-<main class="container">
-  <h2>Education</h2>
-  <p>Ph.D. in Physics, Tohoku University (2025)</p>
+<h2>学歴</h2>
+<p>2025 博士（理学） 東北大学</p>
 
-  <h2>Positions</h2>
-  <p>JSPS PD (2025–), RIKEN SPDR (from 2026)</p>
+<h2>職歴</h2>
+<p>JSPS PD（2025–）、RIKEN SPDR（2026– 予定）</p>
 
-  <h2>Awards</h2>
-  <ul>
-    <li>L'Oréal-UNESCO For Women in Science Japan Fellowship (2025)</li>
-    <!-- 追加していけばOK -->
-  </ul>
-</main>
-<footer class="site-footer"><div class="container">© Ryoko Kino</div></footer>
-</body></html>
+<h2>受賞</h2>
+<ul>
+  <li>L'Oréal-UNESCO For Women in Science Japan Fellowship (2025)</li>
+</ul>
