--- a/index.html
+++ b/index.html
@@ -15,44 +15,55 @@ sidebar: profile
 <ul class="news">
   <li>
     <time>2025-09-12</time>
-    <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+     <span>    
+     <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
       The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
     </a>
     において ANPhA Award for Young Scientist を受賞しました。
+     </span>    
   </li>
 
   <li>
     <time>2025-09-11</time>
+     <span>    
     <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
       The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
     </a>
     で招待講演を行いました。
+     </span>    
   </li>
 
   <li>
     <time>2025-06-26</time>
+     <span>    
     日本学術振興会特別研究員 DC 採用最終年次における研究奨励金特別手当に採択されました。
+     </span>    
   </li>
 
   <li>
     <time>2025-05-29</time>
+     <span>    
     <a href="https://inpc2025.org" target="_blank" rel="noopener noreferrer">
       The 29th International Nuclear Physics Conference 2025 (INPC2025)
     </a>
     で口頭発表を行いました。
+     </span>    
   </li>
 
   <li>
     <time>2025-05-01</time>
+     <span>    
     「電子散乱による六重水素の基底状態エネルギー測定実験」についてのプレスリリースが
     マインツ大学より発表されました。
     <a href="https://phys.org/news/2025-04-electron-results-method-extremely-heavy.html" target="_blank" rel="noopener noreferrer">
       [Link]
     </a>
+     </span>    
   </li>
 
   <li>
     <time>2025-04-22</time>
+     <span>    
     共同実験者として参加したドイツ・マインツ大学 MAMI における
     「電子散乱による六重水素の基底状態エネルギー測定実験」についての論文が
     <em>Physical Review Letters</em> より出版されました。
@@ -60,6 +71,7 @@ sidebar: profile
     <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener noreferrer">
       10.1103/PhysRevLett.134.162501
     </a>
+     </span>    
   </li>
 </ul>  
 </section>
