--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ sidebar: profile
   <h2>Welcome to my home page!</h2>
   <p>I'm Ryoko Kino（木野 量子）.</p>
 
-  <h2>NEWSS</h2>
+  <h2>NEWS</h2>
 <ul class="news">
   <li>
     <time>2025-09-12</time>
