--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 lang: en
-title: Ryoko Kino
+title: Ryoko Kino's Home
 hreflang_ja: https://ryoko0710.github.io/
 hreflang_en: https://ryoko0710.github.io/en/
 sidebar: profile
@@ -9,19 +9,69 @@ sidebar: profile
 
 <section>
   <h2>Welcome to my home page!</h2>
-  <p>I'm Ryoko Kino (木野 量子).</p>
+  <p>I'm Ryoko Kino, a physicist specializing in hypernuclear and kaonic nuclear studies.</p>
 
   <h2>NEWS</h2>
   <ul class="news">
-    <li><time>2025-09-12</time> Received the ANPhA Award for Young Scientist at <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a>.</li>
-    <li><time>2025-09-11</time> Gave an invited talk at <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener">APFB2025</a>.</li>
-    <li><time>2025-06-26</time> Selected for the JSPS DC special research grant (final year).</li>
-    <li><time>2025-05-29</time> Oral presentation at <a href="https://inpc2025.org" target="_blank" rel="noopener">INPC2025</a>.</li>
-    <li><time>2025-04-22</time> PRL publication on the ground-state energy of hexahydrogen via electron scattering. DOI: <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener">10.1103/PhysRevLett.134.162501</a></li>
-  </ul>
+    <li>
+      <time>2025-09-12</time>
+      <span>
+        Received the ANPhA & AAPPS-DNP Award for Young Scientist at
+        <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+          The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
+        </a>.
+      </span>
+    </li>
 
-  <h2>Research Interests</h2>
-  <h3>In Progress</h3>
-  <p>Hypertriton mass measurement by decay pion spectroscopy at MAMI (Mainz Microtron), Germany.</p>
-  <p>Development of Photon Beam Profile Monitoring System at RARiS BM4 Photon Beamline (Tohoku University).</p>
+    <li>
+      <time>2025-09-11</time>
+      <span>
+        Delivered an invited talk at
+        <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+          The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
+        </a>.
+      </span>
+    </li>
+
+    <li>
+      <time>2025-06-26</time>
+      <span>
+        Selected for the Special Research Encouragement Grant under the JSPS DC Program (Final Year).
+      </span>
+    </li>
+
+    <li>
+      <time>2025-05-29</time>
+      <span>
+        Gave an oral presentation at
+        <a href="https://inpc2025.org" target="_blank" rel="noopener noreferrer">
+          The 29th International Nuclear Physics Conference 2025 (INPC2025)
+        </a>.
+      </span>
+    </li>
+
+    <li>
+      <time>2025-05-01</time>
+      <span>
+        A press release on the experiment “Measurement of the Ground-State Energy of Hexahydrogen by Electron Scattering”
+        was issued by the University of Mainz.
+        <a href="https://phys.org/news/2025-04-electron-results-method-extremely-heavy.html" target="_blank" rel="noopener noreferrer">
+          [Link]
+        </a>
+      </span>
+    </li>
+
+    <li>
+      <time>2025-04-22</time>
+      <span>
+        The paper on the experiment “Measurement of the Ground-State Energy of Hexahydrogen by Electron Scattering,”
+        conducted at MAMI (Johannes Gutenberg University Mainz), has been published in
+        <em>Physical Review Letters</em>.
+        DOI:
+        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener noreferrer">
+          10.1103/PhysRevLett.134.162501
+        </a>
+      </span>
+    </li>
+  </ul>
 </section>
