--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ sidebar: profile
      <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
       The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
     </a>
-    において ANPhA Award for Young Scientist を受賞しました。
+    においてANPhA & AAPPS-DNP award for young scientistを受賞しました。
      </span>    
   </li>
 
@@ -64,9 +64,7 @@ sidebar: profile
   <li>
     <time>2025-04-22</time>
      <span>    
-    共同実験者として参加したドイツ・マインツ大学 MAMI における
-    「電子散乱による六重水素の基底状態エネルギー測定実験」についての論文が
-    <em>Physical Review Letters</em> より出版されました。
+    共同実験者として参加したドイツ・マインツ大学 MAMI における「電子散乱による六重水素の基底状態エネルギー測定実験」についての論文が<em>Physical Review Letters</em> より出版されました。
     DOI:
     <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener noreferrer">
       10.1103/PhysRevLett.134.162501
