--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 lang: en
-title: Ryoko Kino's Home
+title: Ryoko Kino's Home (English)
 hreflang_ja: https://ryoko0710.github.io/
 hreflang_en: https://ryoko0710.github.io/en/
 sidebar: profile
@@ -9,69 +9,124 @@ sidebar: profile
 
 <section>
   <h2>Welcome to my home page!</h2>
-  <p>I'm Ryoko Kino, a physicist specializing in hypernuclear and kaonic nuclear studies.</p>
+  <p>I'm Ryoko Kino.</p>
 
   <h2>NEWS</h2>
-  <ul class="news">
-    <li>
-      <time>2025-09-12</time>
-      <span>
-        Received the ANPhA & AAPPS-DNP Award for Young Scientist at
-        <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
-          The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
-        </a>.
-      </span>
-    </li>
+<ul class="news">
+  <li>
+    <time>2025-10-02</time>
+    <span>
+      Received the 
+      <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
+        L’Oréal–UNESCO For Women in Science Japan Fellowship.
+      </a>
+    </span>
+  </li>
 
-    <li>
-      <time>2025-09-11</time>
-      <span>
-        Delivered an invited talk at
-        <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
-          The 9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025)
-        </a>.
-      </span>
-    </li>
+  <li>
+    <time>2025-10-01</time>
+    <span>
+      Joined the 
+      <a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">
+        Meson RIKEN ECL Research Team, RIKEN Nishina Center for Accelerator-Based Science,
+      </a>
+      as a postdoctoral fellow.
+    </span>
+  </li>
 
-    <li>
-      <time>2025-06-26</time>
-      <span>
-        Selected for the Special Research Encouragement Grant under the JSPS DC Program (Final Year).
-      </span>
-    </li>
+  <li>
+    <time>2025-09-30</time>
+    <span>
+      Gave an oral presentation at 
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/hyp2025/" target="_blank" rel="noopener noreferrer">
+        HYP2025 (International Conference on Hypernuclear and Strange Particle Physics).
+      </a>
+    </span>
+  </li>
 
-    <li>
-      <time>2025-05-29</time>
-      <span>
-        Gave an oral presentation at
-        <a href="https://inpc2025.org" target="_blank" rel="noopener noreferrer">
-          The 29th International Nuclear Physics Conference 2025 (INPC2025)
-        </a>.
-      </span>
-    </li>
+  <li>
+    <time>2025-09-20</time>
+    <span>
+      Participated as a young supporter in the 
+      <a href="https://indico.rcnp.osaka-u.ac.jp/event/2628/" target="_blank" rel="noopener noreferrer">
+        SPADI-A Workshop 2025
+      </a>
+      held at RCNP, Osaka University.
+    </span>
+  </li>
 
-    <li>
-      <time>2025-05-01</time>
-      <span>
-        A press release on the experiment “Measurement of the Ground-State Energy of Hexahydrogen by Electron Scattering”
-        was issued by the University of Mainz.
-        <a href="https://phys.org/news/2025-04-electron-results-method-extremely-heavy.html" target="_blank" rel="noopener noreferrer">
-          [Link]
-        </a>
-      </span>
-    </li>
+  <li>
+    <time>2025-09-16</time>
+    <span>
+      Delivered an oral presentation at the 
+      <a href="https://www.jps.or.jp/activities/meetings/annual/annual-index.php" target="_blank" rel="noopener noreferrer">
+        80th Annual Meeting of the Physical Society of Japan.
+      </a>
+    </span>
+  </li>
 
-    <li>
-      <time>2025-04-22</time>
-      <span>
-        The paper on the experiment “Measurement of the Ground-State Energy of Hexahydrogen by Electron Scattering,”
-        conducted at MAMI (Johannes Gutenberg University Mainz), has been published in
-        <em>Physical Review Letters</em>.
-        DOI:
-        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener noreferrer">
-          10.1103/PhysRevLett.134.162501
-        </a>
-      </span>
-    </li>
-  </ul>
+  <li>
+    <time>2025-09-12</time>
+     <span>
+     Received the ANPhA & AAPPS-DNP Award for Young Scientist at the
+     <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+      9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025).
+     </a>
+     </span>
+  </li>
+
+  <li>
+    <time>2025-09-11</time>
+     <span>
+     Gave an invited talk at the
+     <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+      9th Asia-Pacific Conference on Few-body Problems in Physics (APFB2025).
+     </a>
+     </span>
+  </li>
+
+  <li>
+    <time>2025-06-26</time>
+     <span>
+      Selected for the Special Research Incentive Grant for the final year of the JSPS Research Fellowship (DC).
+     </span>
+  </li>
+
+  <li>
+    <time>2025-05-29</time>
+     <span>
+      Presented an oral talk at the
+      <a href="https://inpc2025.org" target="_blank" rel="noopener noreferrer">
+        29th International Nuclear Physics Conference 2025 (INPC2025).
+      </a>
+     </span>
+  </li>
+
+  <li>
+    <time>2025-05-01</time>
+     <span>
+      A press release on the experiment
+      “Measurement of the Ground-State Energy of Hexahydrogen via Electron Scattering”
+      was published by Mainz University.
+      <a href="https://phys.org/news/2025-04-electron-results-method-extremely-heavy.html" target="_blank" rel="noopener noreferrer">
+        [Link]
+      </a>
+     </span>
+  </li>
+
+  <li>
+    <time>2025-04-22</time>
+     <span>
+      A paper on the
+      “Measurement of the Ground-State Energy of Hexahydrogen via Electron Scattering”
+      conducted at the Mainz Microtron (MAMI), in which I participated as a collaborator,
+      was published in <em>Physical Review Letters</em>.
+      DOI:
+      <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.134.162501" target="_blank" rel="noopener noreferrer">
+        10.1103/PhysRevLett.134.162501
+      </a>
+     </span>
+  </li>
+</ul>
+
 </section>
