--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ sidebar: profile
   <li>
     <time>2025-10-02</time>
     <span>
-      <a href="https://www.forwomeninscience.com/en/fellowships/282725595" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
         ロレアル－ユネスコ女性科学者日本奨励賞
       </a>
       を受賞しました。
@@ -26,14 +26,14 @@ sidebar: profile
   <li>
     <time>2025-10-01</time>
     <span>
-      所属が理化学研究所 中間子・原子核研究センター（Meson Science Laboratory）に変更になりました。
+      所属が<a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター中間子ECL研究チーム</a>に変更になりました。
     </span>
   </li>
 
   <li>
     <time>2025-09-30</time>
     <span>
-      <a href="https://www.hyp2025.org/" target="_blank" rel="noopener noreferrer">
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/hyp2025/" target="_blank" rel="noopener noreferrer">
         HYP2025（International Conference on Hypernuclear and Strange Particle Physics）
       </a>
       で口頭発表を行いました。
@@ -44,8 +44,8 @@ sidebar: profile
     <time>2025-09-20</time>
     <span>
       大阪大学RCNPで行われた
-      <a href="https://www.rcnp.osaka-u.ac.jp/Divisions/np1-np2/spadi-a/" target="_blank" rel="noopener noreferrer">
-        SPADI-A合宿
+      <a href="https://indico.rcnp.osaka-u.ac.jp/event/2628/" target="_blank" rel="noopener noreferrer">
+        SPADI-A合宿2025
       </a>
       に若手サポーターとして参加しました。
     </span>
@@ -54,7 +54,7 @@ sidebar: profile
   <li>
     <time>2025-09-16</time>
     <span>
-      <a href="https://www.jps.or.jp/" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.jps.or.jp/activities/meetings/annual/annual-index.php" target="_blank" rel="noopener noreferrer">
         日本物理学会第80回年次大会
       </a>
       で口頭発表を行いました。
