--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ sidebar: profile
   <li>
     <time>2025-10-01</time>
     <span>
-      所属が<a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター中間子ECL研究チーム</a>に変更になりました。
+      所属が<a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター中間子理研ECL研究チーム</a>に変更になりました。
     </span>
   </li>
 
