--- a/cv/index.html
+++ b/cv/index.html
@@ -6,12 +6,68 @@ header_size: small
 ---
 
 <h2>学歴</h2>
-<p>2025 博士（理学） 東北大学</p>
+<ul>
+  <li>2023.04 – 2025.09： 東北大学 大学院理学研究科 物理学専攻 博士課程 博士（理学）</li>
+  <li>2021.04 – 2023.03： 東北大学 大学院理学研究科 物理学専攻 修士課程 修士（理学）</li>
+  <li>2017.04 – 2021.03： 山形大学 理学部 物理学科 学士（理学）</li>
+</ul>
 
-<h2>職歴</h2>
-<p>JSPS PD（2025–）、RIKEN SPDR（2026– 予定）</p>
+<h2>職歴・活動</h2>
+<ul>
+  <li>2025.10 – 現在： 日本学術振興会 特別研究員（PD）</li>
+  <li>2023.04 – 2025.09： 日本学術振興会 特別研究員（DC1）</li>
+  <li>2022.04 – 2025.09： リサーチ・アシスタント（
+    <a href="http://gp-pu.tohoku.ac.jp/" target="_blank" rel="noopener noreferrer">GP-PU（宇宙創成物理学国際共同大学院）</a>、東北大学）
+  </li>
+
+  <li>2025.08： ティーチング・アシスタント（
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">KEK サマーチャレンジ 第19回</a>）
+  </li>
+  <li>2024.08： ティーチング・アシスタント（
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">KEK サマーチャレンジ 第18回</a>）
+  </li>
+  <li>2023.08： ティーチング・アシスタント（
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">KEK サマーチャレンジ 第17回</a>）
+  </li>
+  <li>2023.08： ティーチング・アシスタント（
+    <a href="https://mirai-eggs.org/日英サイエンスワークショップ発表会（第3回特別/" target="_blank" rel="noopener noreferrer">UK–Japan Young Scientists Workshop</a>）
+  </li>
+  <li>2022.02 – 2022.03： ティーチング・アシスタント（
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">KEK サマーチャレンジ 第15回</a>）
+  </li>
+  <li>2021.10 – 2022.03： 自然科学総合実験 ティーチング・アシスタント（東北大学）</li>
+  <li>2021.04 – 2022.03： 物理学実験 ティーチング・アシスタント（東北大学）</li>
+  <li>2019.08 – 2019.09： 事務補助（留学生寮サポート、山形大学）</li>
+</ul>
 
 <h2>受賞</h2>
 <ul>
-  <li>L'Oréal-UNESCO For Women in Science Japan Fellowship (2025)</li>
+  <li>2025.10： <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">ロレアル－ユネスコ女性科学者日本奨励賞</a></li>
+  <li>2025.09： <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">ANPhA & AAPPS-DNP for young scientist 賞</a>（ANPhA / APFB2025）
+    「Precise Mass Measurement of Hypertriton via Decay Pion Spectroscopy」</li>
+  <li>2025.03： <a href="https://www.sci.tohoku.ac.jp/aoba-society/cat188/" target="_blank" rel="noopener noreferrer">令和6年度 黒田チカ賞</a>（青葉理学振興会）</li>
+  <li>2024.09： <a href="https://sites.google.com/view/gppu-school-2024-sep-24-27-sen/home?authuser=0" target="_blank" rel="noopener noreferrer">GPPU 特別賞</a>  
+    「Progress in mass measurement of light hypernuclei and high-precision spectrometer calibration method at MAMI」</li>
+  <li>2024.08： <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpcnsss2024" target="_blank" rel="noopener noreferrer">SNP–CNS サマースクール奨励賞 / ANPhA 2nd Award</a>  
+    「High-precision mass measurement of s-shell hypernuclei at MAMI」</li>
+  <li>2023.12： <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2023" target="_blank" rel="noopener noreferrer">SNPスクール奨励賞 / ANPhA 2nd Award</a>  
+    「Analysis status of decay-pion spectroscopy of s-shell hypernuclei」</li>
+  <li>2023.04： <a href="https://itdc.kek.jp/awards/aw2022.html" target="_blank" rel="noopener noreferrer">第13回 測定器開発優秀修士論文賞</a>（ITDC 測定器開発センター）  
+    修士論文「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」</li>
+  <li>2023.03： <a href="https://www.rcnp.osaka-u.ac.jp/~jparchua/jp/award.html" target="_blank" rel="noopener noreferrer">HUA 修士論文賞</a>  
+    「Development of high energy photon and electron beam profile monitor and application to accelerator research」</li>
+  <li>2023.02： <a href="https://www.gp-pu.tohoku.ac.jp/download/data230302.pdf" target="_blank" rel="noopener noreferrer">GP-PU QE1 特別賞</a>  
+    「Development of high energy photon and electron beam profile monitor and application to accelerator research」</li>
+  <li>2023.02： <a href="https://www.sci.tohoku.ac.jp/news/20230224-12513.html" target="_blank" rel="noopener noreferrer">令和4年度 東北大学 物理学専攻賞</a>  
+    修士論文「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」</li>
+  <li>2022.11： <a href="http://be.nucl.ap.titech.ac.jp/cluster/symposium/334/" target="_blank" rel="noopener noreferrer">CLUSHIQ2022 ANPhA Incentive Award</a>  
+    「Current status of decay-pion spectroscopy of light Lambda hypernuclei at MAMI」</li>
+  <li>2022.10： <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2022" target="_blank" rel="noopener noreferrer">橋本賞 / ANPhA 1st Award</a>  
+    「Measurement of the binding energy of Hypertriton at MAMI」</li>
+  <li>2022.09： <a href="https://lambda.phys.tohoku.ac.jp/QBI2022/" target="_blank" rel="noopener noreferrer">QBI2022 最優秀発表賞</a>  
+    「Realtime imaging of high energy gamma-ray beams from 1.3 GeV electron synchrotron accelerator at ELPH Tohoku」</li>
+  <li>2021.12： <a href="https://indico.rcnp.osaka-u.ac.jp/event/1640/#" target="_blank" rel="noopener noreferrer">SNPスクール奨励賞</a>  
+    「Development of Beam Position Monitor (BPM) for hypernuclear experiments in high-intensity photon beam line」</li>
+  <li>2021.03： <a href="https://www.sci.yamagata-u.ac.jp/news/detail/700/" target="_blank" rel="noopener noreferrer">令和2年度 山形大学 ふすま優秀発表賞</a>  
+    卒業論文「e<sup>−</sup>μ<sup>−</sup> → e<sup>−</sup>μ<sup>−</sup> 過程の微分散乱断面積の計算」</li>
 </ul>
