--- a/cv/index.html
+++ b/cv/index.html
@@ -47,7 +47,6 @@ header_size: small
     <span>
       <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/"
          target="_blank" rel="noopener noreferrer">ロレアル－ユネスコ女性科学者日本奨励賞</a>
-      を受賞。
     </span>
   </li>
   <li>
@@ -81,11 +80,51 @@ header_size: small
     </span>
   </li>
   <li>
+    <time>2023-12</time>
+    <span>
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2023"
+         target="_blank" rel="noopener noreferrer">SNPスクール奨励賞 / ANPhA 2nd Award</a>  
+      「Analysis status of decay-pion spectroscopy of s-shell hypernuclei」
+    </span>
+  </li>
+  <li>
     <time>2023-04</time>
     <span>
       <a href="https://itdc.kek.jp/awards/aw2022.html"
          target="_blank" rel="noopener noreferrer">第13回 測定器開発優秀修士論文賞</a>（ITDC 測定器開発センター）  
       修士論文「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」
+    </span>
+  </li>
+  <li>
+    <time>2023-03</time>
+    <span>
+      <a href="https://www.rcnp.osaka-u.ac.jp/~jparchua/jp/award.html"
+         target="_blank" rel="noopener noreferrer">HUA 修士論文賞</a>  
+      「Development of high energy photon and electron beam profile monitor and application to accelerator research」
+    </span>
+  </li>
+  <li>
+    <time>2023-02</time>
+    <span>
+      <a href="https://www.gp-pu.tohoku.ac.jp/download/data230302.pdf"
+         target="_blank" rel="noopener noreferrer">GP-PU QE1 特別賞</a>  
+      「Development of high energy photon and electron beam profile monitor and application to accelerator research」
+    </span>
+  </li>
+  <li>
+    <time>2023-02</time>
+    <span>
+      <a href="https://www.sci.tohoku.ac.jp/news/20230224-12513.html"
+         target="_blank" rel="noopener noreferrer">令和4年度 東北大学 物理学専攻賞</a>  
+      修士論文「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」
+    </span>
+  </li>
+  <li>
+    <time>2022-11</time>
+    <span>
+      <a href="http://be.nucl.ap.titech.ac.jp/cluster/symposium/334/"
+         target="_blank" rel="noopener noreferrer">CLUSHIQ2022 ANPhA Incentive Award</a>  
+      「Current status of decay-pion spectroscopy of light Lambda hypernuclei at MAMI」
     </span>
   </li>
   <li>
@@ -97,6 +136,22 @@ header_size: small
     </span>
   </li>
   <li>
+    <time>2022-09</time>
+    <span>
+      <a href="https://lambda.phys.tohoku.ac.jp/QBI2022/"
+         target="_blank" rel="noopener noreferrer">QBI2022 最優秀発表賞</a>  
+      「Realtime imaging of high energy gamma-ray beams from 1.3 GeV electron synchrotron accelerator at ELPH Tohoku」
+    </span>
+  </li>
+  <li>
+    <time>2021-12</time>
+    <span>
+      <a href="https://indico.rcnp.osaka-u.ac.jp/event/1640/#"
+         target="_blank" rel="noopener noreferrer">SNPスクール奨励賞</a>  
+      「Development of Beam Position Monitor (BPM) for hypernuclear experiments in high-intensity photon beam line」
+    </span>
+  </li>
+  <li>
     <time>2021-03</time>
     <span>
       <a href="https://www.sci.yamagata-u.ac.jp/news/detail/700/"
@@ -105,4 +160,5 @@ header_size: small
     </span>
   </li>
 </ul>
+
 </ul>
