--- a/cv/index.html
+++ b/cv/index.html
@@ -45,8 +45,9 @@ header_size: small
     <time>2025-10</time>
     <span>
       <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
-        ロレアル－ユネスコ女性科学者 日本奨励賞
+        第20回ロレアル－ユネスコ女性科学者 日本奨励賞
       </a>
+    ／「ハイパートライトンのΛ束縛エネルギーと寿命の高精度測定によるバリオン間力の解明」／日本ロレアル・日本ユネスコ国内委員会（大阪・関西万博）
     </span>
   </li>
 
@@ -56,7 +57,7 @@ header_size: small
       <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
         ANPhA &amp; AAPPS-DNP award for young scientist
       </a>
-      （授与：ANPhA / AAPPS-DNP、会議：APFB2025）
+     ／“Precise Mass Measurement of Hypertriton via Decay Pion Spectroscopy”／APFB2025 (Van Lang University, Ho Chi Minh, Vietnam)
     </span>
   </li>
 
@@ -86,7 +87,7 @@ header_size: small
       <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpcnsss2024" target="_blank" rel="noopener noreferrer">
         The SNP-CNS Summer School Incentive Prize / ANPhA 2nd Award
       </a>
-      ／“High-precision mass measurement of s-shell hypernuclei at MAMI”／SNP-CNS Summer School 2024（Wako, RIKEN）
+      ／“High-precision mass measurement of s-shell hypernuclei at MAMI”／SNP-CNS Summer School 2024（RIKEN）
     </span>
   </li>
 
@@ -106,7 +107,7 @@ header_size: small
       <a href="https://itdc.kek.jp/awards/aw2022.html" target="_blank" rel="noopener noreferrer">
         第13回 測定器開発優秀修士論文賞
       </a>
-      （ITDC 測定器開発センター）／修士論文 “Development of high energy photon and electron beam profile monitor and application to accelerator research”
+      ／修士論文 「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」／ITDC 測定器開発センター
     </span>
   </li>
 
@@ -114,9 +115,9 @@ header_size: small
     <time>2023-03</time>
     <span>
       <a href="https://www.rcnp.osaka-u.ac.jp/~jparchua/jp/award.html" target="_blank" rel="noopener noreferrer">
-        HUA Master’s Thesis Award
+        HUA 修士論文賞
       </a>
-      ／“Development of high energy photon and electron beam profile monitor and application to accelerator research”／J-PARC Hadron Hall Users Association
+      ／修士論文 「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」／J-PARC Hadron Hall Users Association
     </span>
   </li>
 
@@ -136,7 +137,7 @@ header_size: small
       <a href="https://www.sci.tohoku.ac.jp/news/20230224-12513.html" target="_blank" rel="noopener noreferrer">
         令和4年度 東北大学 物理学専攻賞
       </a>
-      ／修士論文 “Development of high energy photon and electron beam profile monitor and application to accelerator research”
+      ／修士論文 「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」
     </span>
   </li>
 
