--- a/cv/index.html
+++ b/cv/index.html
@@ -67,7 +67,7 @@ header_size: small
       <a href="https://www.sci.tohoku.ac.jp/aoba-society/cat188/" target="_blank" rel="noopener noreferrer">
         令和6年度 黒田チカ賞
       </a>
-      （青葉理学振興会）
+      ／青葉理学振興会
     </span>
   </li>
 
