--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -6,12 +6,201 @@ header_size: small
 ---
 
 <h2>Education</h2>
-<p>Ph.D. in Physics, Tohoku University (2025)</p>
+<ul>
+  <li>Apr 2023 – Sep 2025: Ph.D. in Physics, Graduate School of Science, Tohoku University</li>
+  <li>Apr 2021 – Mar 2023: M.Sc. in Physics, Graduate School of Science, Tohoku University</li>
+  <li>Apr 2017 – Mar 2021: B.Sc. in Physics, Faculty of Science, Yamagata University</li>
+</ul>
 
-<h2>Positions</h2>
-<p>JSPS PD (2025–), RIKEN SPDR (from 2026)</p>
+<h2>Professional Experience & Activities</h2>
+<ul>
+  <li>Oct 2025 – Present: JSPS Postdoctoral Fellow (PD)</li>
+  <li>Apr 2023 – Sep 2025: JSPS Research Fellow (DC1)</li>
+  <li>Apr 2022 – Sep 2025: Research Assistant, 
+    <a href="http://gp-pu.tohoku.ac.jp/" target="_blank" rel="noopener noreferrer">
+      GP-PU (Graduate Program on Physics for the Universe, Tohoku University)
+    </a>
+  </li>
+
+  <li>Aug 2025: Teaching Assistant, 
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">
+      KEK Summer Challenge 2025 (19th)
+    </a>
+  </li>
+  <li>Aug 2024: Teaching Assistant, 
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">
+      KEK Summer Challenge 2024 (18th)
+    </a>
+  </li>
+  <li>Aug 2023: Teaching Assistant, 
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">
+      KEK Summer Challenge 2023 (17th)
+    </a>
+  </li>
+  <li>Aug 2023: Teaching Assistant, 
+    <a href="https://mirai-eggs.org/日英サイエンスワークショップ発表会（第3回特別/" target="_blank" rel="noopener noreferrer">
+      UK–Japan Young Scientists Workshop
+    </a>
+  </li>
+  <li>Feb 2022 – Mar 2022: Teaching Assistant, 
+    <a href="https://www2.kek.jp/ksc/" target="_blank" rel="noopener noreferrer">
+      KEK Summer Challenge 2022 (15th)
+    </a>
+  </li>
+  <li>Oct 2021 – Mar 2022: Teaching Assistant, General Science Laboratory (Tohoku University)</li>
+  <li>Apr 2021 – Mar 2022: Teaching Assistant, Physics Laboratory (Tohoku University)</li>
+  <li>Aug 2019 – Sep 2019: Administrative Assistant (Support for International Student Dormitory, Yamagata University)</li>
+</ul>
 
 <h2>Awards</h2>
-<ul>
-  <li>L'Oréal-UNESCO For Women in Science Japan Fellowship (2025)</li>
+<ul class="awards">
+  <li>
+    <time>2025-10</time>
+    <span>
+      <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
+        20th L’Oréal–UNESCO For Women in Science Japan Fellowship
+      </a>
+      ／“Elucidation of Baryon–Baryon Interaction via Precision Measurements of Λ Binding Energy and Lifetime of Hypertriton”／Presented by L’Oréal Japan & Japanese National Commission for UNESCO (Expo 2025 Osaka–Kansai)
+    </span>
+  </li>
+
+  <li>
+    <time>2025-09</time>
+    <span>
+      <a href="https://apfb2025.vlu.edu.vn" target="_blank" rel="noopener noreferrer">
+        ANPhA &amp; AAPPS-DNP Award for Young Scientist
+      </a>
+      ／“Precise Mass Measurement of Hypertriton via Decay Pion Spectroscopy”／APFB2025 (Van Lang University, Ho Chi Minh, Vietnam)
+    </span>
+  </li>
+
+  <li>
+    <time>2025-03</time>
+    <span>
+      <a href="https://www.sci.tohoku.ac.jp/aoba-society/cat188/" target="_blank" rel="noopener noreferrer">
+        Kuroda Chika Award (FY2024)
+      </a>
+      ／Aoba Society for the Promotion of Science, Tohoku University
+    </span>
+  </li>
+
+  <li>
+    <time>2024-09</time>
+    <span>
+      <a href="https://sites.google.com/view/gppu-school-2024-sep-24-27-sen/home?authuser=0" target="_blank" rel="noopener noreferrer">
+        GPPU Special Award
+      </a>
+      ／“Progress in Mass Measurement of Light Hypernuclei and High-Precision Spectrometer Calibration Method at MAMI”／GPPU School 2024 (Tohoku University)
+    </span>
+  </li>
+
+  <li>
+    <time>2024-08</time>
+    <span>
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpcnsss2024" target="_blank" rel="noopener noreferrer">
+        SNP–CNS Summer School Incentive Prize / ANPhA 2nd Award
+      </a>
+      ／“High-Precision Mass Measurement of s-Shell Hypernuclei at MAMI”／SNP–CNS Summer School 2024 (RIKEN)
+    </span>
+  </li>
+
+  <li>
+    <time>2023-12</time>
+    <span>
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2023" target="_blank" rel="noopener noreferrer">
+        SNP School Incentive Prize / ANPhA 2nd Award
+      </a>
+      ／“Analysis Status of Decay-Pion Spectroscopy of s-Shell Hypernuclei”／SNP School 2023 (J-PARC)
+    </span>
+  </li>
+
+  <li>
+    <time>2023-04</time>
+    <span>
+      <a href="https://itdc.kek.jp/awards/aw2022.html" target="_blank" rel="noopener noreferrer">
+        13th ITDC Award for Outstanding Master’s Thesis in Detector Development
+      </a>
+      ／Master’s Thesis “Development of High Energy Photon and Electron Beam Profile Monitor and Application to Accelerator Research”／ITDC Detector Development Center
+    </span>
+  </li>
+
+  <li>
+    <time>2023-03</time>
+    <span>
+      <a href="https://www.rcnp.osaka-u.ac.jp/~jparchua/jp/award.html" target="_blank" rel="noopener noreferrer">
+        HUA Master’s Thesis Award
+      </a>
+      ／Master’s Thesis “Development of High Energy Photon and Electron Beam Profile Monitor and Application to Accelerator Research”／J-PARC Hadron Hall Users Association
+    </span>
+  </li>
+
+  <li>
+    <time>2023-02</time>
+    <span>
+      <a href="https://www.gp-pu.tohoku.ac.jp/download/data230302.pdf" target="_blank" rel="noopener noreferrer">
+        QE1 Special Award
+      </a>
+      ／“Development of High Energy Photon and Electron Beam Profile Monitor and Application to Accelerator Research”／2023 GP-PU Qualifying Examination 1
+    </span>
+  </li>
+
+  <li>
+    <time>2023-02</time>
+    <span>
+      <a href="https://www.sci.tohoku.ac.jp/news/20230224-12513.html" target="_blank" rel="noopener noreferrer">
+        Tohoku University Department of Physics Award (FY2022)
+      </a>
+      ／Master’s Thesis “Development of High Energy Photon and Electron Beam Profile Monitor and Application to Accelerator Research”
+    </span>
+  </li>
+
+  <li>
+    <time>2022-11</time>
+    <span>
+      <a href="http://be.nucl.ap.titech.ac.jp/cluster/symposium/334/" target="_blank" rel="noopener noreferrer">
+        CLUSHIQ2022 ANPhA Incentive Award
+      </a>
+      ／“Current Status of Decay-Pion Spectroscopy of Light Lambda Hypernuclei at MAMI”／CLUSHIQ2022 (Sendai International Center)
+    </span>
+  </li>
+
+  <li>
+    <time>2022-10</time>
+    <span>
+      <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2022" target="_blank" rel="noopener noreferrer">
+        Hashimoto Prize / ANPhA 1st Award
+      </a>
+      ／“Measurement of the Binding Energy of Hypertriton at MAMI”／SNP School 2022 (Tohoku University)
+    </span>
+  </li>
+
+  <li>
+    <time>2022-09</time>
+    <span>
+      <a href="https://lambda.phys.tohoku.ac.jp/QBI2022/" target="_blank" rel="noopener noreferrer">
+        QBI2022 Best Presentation Award
+      </a>
+      ／“Realtime Imaging of High Energy Gamma-Ray Beams from 1.3 GeV Electron Synchrotron Accelerator at ELPH Tohoku”／QBI2022 (RIKEN)
+    </span>
+  </li>
+
+  <li>
+    <time>2021-12</time>
+    <span>
+      <a href="https://indico.rcnp.osaka-u.ac.jp/event/1640/#" target="_blank" rel="noopener noreferrer">
+        SNP School Incentive Prize
+      </a>
+      ／“Development of Beam Position Monitor (BPM) for Hypernuclear Experiments in High-Intensity Photon Beam Line”／SNP School 2021 (RCNP)
+    </span>
+  </li>
+
+  <li>
+    <time>2021-03</time>
+    <span>
+      <a href="https://www.sci.yamagata-u.ac.jp/news/detail/700/" target="_blank" rel="noopener noreferrer">
+        Yamagata University “Fusuma” Excellent Presentation Award (FY2020)
+      </a>
+      ／Bachelor’s Thesis “e<sup>−</sup>μ<sup>−</sup> → e<sup>−</sup>μ<sup>−</sup> Differential Cross Section Calculation”
+    </span>
+  </li>
 </ul>
