--- a/cv/index.html
+++ b/cv/index.html
@@ -7,8 +7,8 @@ header_size: small
 
 <h2>学歴</h2>
 <ul>
-  <li>2023.04 – 2025.09： 東北大学 大学院理学研究科 物理学専攻 博士課程 博士（理学）</li>
-  <li>2021.04 – 2023.03： 東北大学 大学院理学研究科 物理学専攻 修士課程 修士（理学）</li>
+  <li>2023.04 – 2025.09： 東北大学 大学院理学研究科 物理学専攻 博士後期課程 博士（理学）</li>
+  <li>2021.04 – 2023.03： 東北大学 大学院理学研究科 物理学専攻 博士前期課程 修士（理学）</li>
   <li>2017.04 – 2021.03： 山形大学 理学部 物理学科 学士（理学）</li>
 </ul>
 
