--- a/talk/index.html
+++ b/talk/index.html
@@ -47,8 +47,7 @@ header_size: small
     <li>
       <time>2024-12-02</time>
       <span>
-        “Streaming DAQ for GeV Photon Beam Profile Monitor at RARiS BM4 Beamline”
-        /
+        “Streaming DAQ for GeV Photon Beam Profile Monitor at RARiS BM4 Beamline” /
         <a href="https://indico.bnl.gov/event/24286/" target="_blank" rel="noopener noreferrer">Streaming Readout Workshop SRO-XII</a>
       </span>
     </li>
@@ -162,3 +161,238 @@ header_size: small
       </span>
     </li>
   </ul>
+
+  <h2>国内会議</h2>
+  <ul class="awards talk-scroll">
+    <li>
+      <time>2025-09-16</time>
+      <span>
+        「MAMIにおける崩壊パイ中間子分光法による<sup>3</sup><sub>Λ</sub>Hの質量測定実験(4)」 /
+        日本物理学会 2025年第80回年次大会
+      </span>
+    </li>
+
+    <li>
+      <time>2025-03-07</time>
+      <span>
+        「RARiS BM4 GeV光子ビームプロファイルモニタへの新ストリーミングDAQシステムの導入」
+        /
+        <a href="https://indico.lns.tohoku.ac.jp/event/389" target="_blank" rel="noopener noreferrer">電子光理学研究拠点シンポジウム RARiS2025</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2024-11-21</time>
+      <span>
+        “Measurement of Hypertriton Binding Energy at MAMI”
+        <strong>(招待講演)</strong> /
+        <a href="https://indico.lns.tohoku.ac.jp/event/281/overview" target="_blank" rel="noopener noreferrer">RARiS研究会（旧 ELPH研究会）</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2024-09-18</time>
+      <span>
+        「MAMIにおける崩壊パイ中間子分光法による<sup>3</sup><sub>Λ</sub>Hの質量測定実験(3)」 /
+        日本物理学会 2024年第79回年次大会
+      </span>
+    </li>
+
+    <li>
+      <time>2024-03-18</time>
+      <span>
+        「MAMIにおける崩壊パイ中間子分光法による<sup>3</sup><sub>Λ</sub>Hの質量測定実験(2)」 /
+        日本物理学会 2024年春季大会
+      </span>
+    </li>
+
+    <li>
+      <time>2023-09-17</time>
+      <span>
+        「高エネルギー光子・電子ビームプロファイルモニタの開発と加速器研究への応用」
+        <strong>（第13回測定器開発優秀修士論文賞 招待記念講演）</strong> /
+        日本物理学会 第78回年次大会
+      </span>
+    </li>
+
+    <li>
+      <time>2023-03-27</time>
+      <span>
+        “Investigation of s-shell hypernuclei with high-precision spectroscopy at MAMI” /
+        <a href="https://kds.kek.jp/event/44171/" target="_blank" rel="noopener noreferrer">J-PARCハドロン研究会2023</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2023-03-23</time>
+      <span>
+        「MAMIにおける崩壊パイ中間子分光法による<sup>3</sup><sub>Λ</sub>Hの質量測定実験」 /
+        日本物理学会 2023年春季大会
+      </span>
+    </li>
+
+    <li>
+      <time>2023-03-04</time>
+      <span>
+        「崩壊パイ中間子分光法によるハイパートライトンの質量測定実験」 /
+        第5回 KEKサマーチャレンジ世代間交流会
+      </span>
+    </li>
+
+    <li>
+      <time>2023-03-02</time>
+      <span>
+        「ELPH BM4光子ビームラインにおけるビームモニタリングシステムの開発」 /
+        <a href="https://www1.lns.tohoku.ac.jp/~workshop/symposium2023/index.html" target="_blank" rel="noopener noreferrer">ELPHシンポジウム2023</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-12-16</time>
+      <span>
+        「MAMI の崩壊パイ中間子分光法による<sup>3</sup><sub>Λ</sub>H の質量測定研究」 /
+        <a href="https://wiki.jlab.org/tegwiki/index.php/ST2_2022" target="_blank" rel="noopener noreferrer">Workshop "Strange Strong Force and Bound System 2022" (ST2-2022)</a> /
+        <a href="https://wiki.jlab.org/tegwiki/images/b/b7/ST2-2022_kino.pdf" target="_blank" rel="noopener noreferrer">pdf</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-09-07</time>
+      <span>
+        「ELPH BSTリングにおけるGeV領域光子ビームプロファイル」 /
+        <a href="https://onsite.gakkai-web.net/jps/jps_search/2022au/data2/html/programjk.html" target="_blank" rel="noopener noreferrer">日本物理学会 2022年秋季大会</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-03-22</time>
+      <span>
+        “Development of scintillating fiber detector for photon beam profiling at ELPH” /
+        <a href="https://wiki.jlab.org/tegwiki/index.php/HIEI2022_20220316" target="_blank" rel="noopener noreferrer">HIEI2022 Workshop</a> /
+        <a href="https://wiki.jlab.org/tegwiki/images/b/b6/Hiei2022_kino_20220322.pdf" target="_blank" rel="noopener noreferrer">pdf</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-03-15</time>
+      <span>
+        「ELPH標識化光子ビームのオンラインモニタシステムの開発」 /
+        <a href="https://onsite.gakkai-web.net/jps/jps_search/2022sp/data2/html/programjk.html" target="_blank" rel="noopener noreferrer">日本物理学会 第77回年次大会 2022</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-03-11</time>
+      <span>
+        「MPPCを用いたELPH標識化光子ビームのモニタリング検出器の開発」 /
+        <a href="http://www.lns.tohoku.ac.jp/workshop/symposium2022/" target="_blank" rel="noopener noreferrer">ELPHシンポジウム2022</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2021-12-27</time>
+      <span>
+        「First measurement of time-dependent photon beam profile at ELPH BM4 beamline」 /
+        <a href="http://be.nucl.ap.titech.ac.jp/cluster/symposium/312/" target="_blank" rel="noopener noreferrer">第7回クラスター階層領域研究会</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2021-09-15</time>
+      <span>
+        「ハイパー核電磁生成実験のためのスペクトロメータ較正用粒子位置検出器」 /
+        <a href="https://w4.gakkai-web.net/jps_search/2021au/data/html/programjk.html" target="_blank" rel="noopener noreferrer">日本物理学会 2021年秋季大会</a>
+      </span>
+    </li>
+  </ul>
+
+  <h2>国際スクール</h2>
+  <ul class="awards talk-scroll">
+    <li>
+      <time>2024-09-26</time>
+      <span>
+        “Progress in mass measurement of light hypernuclei and high-precision spectrometer calibration method at MAMI”
+        /
+        <a href="https://sites.google.com/view/gppu-school-2024-sep-24-27-sen/home?authuser=0" target="_blank" rel="noopener noreferrer">GPPU school 2024</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2024-08-08</time>
+      <span>
+        “High-precision mass measurement of s-shell hypernuclei at MAMI” /
+        <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpcnsss2024" target="_blank" rel="noopener noreferrer">SNP-CNS Summer School 2024</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2024-07-28</time>
+      <span>
+        “Mass measurement of light hypernuclei via decay-pion spectroscopy” /
+        <a href="https://indico.ihep.ac.cn/event/21760/" target="_blank" rel="noopener noreferrer">NUSYS-2024</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2023-12-12</time>
+      <span>
+        “Analysis status of decay-pion spectroscopy of s-shell hypernuclei”
+        <a href="https://kds.kek.jp/event/49238/contributions/255222/attachments/174036/229809/YRS06-RyokoKino.pdf" target="_blank" rel="noopener noreferrer">pdf（pw required）</a> /
+        <a href="https://lambda.phys.tohoku.ac.jp/snpsc2023/" target="_blank" rel="noopener noreferrer">12th International School for Strangeness Nuclear Physics 2023</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2023-09-27</time>
+      <span>
+        “High-precision decay-pion spectroscopy of s-shell hypernuclei” /
+        <a href="https://sites.google.com/view/gppu-school-2023-sep-26-29-sen/home?authuser=1" target="_blank" rel="noopener noreferrer">GPPU school 2023</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2022-10-27</time>
+      <span>
+        “Measurement of the binding energy of Hypertriton at MAMI” /
+        <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/snpsc2022" target="_blank" rel="noopener noreferrer">SNP School 2022</a>
+      </span>
+    </li>
+
+    <li>
+      <time>2021-12-14</time>
+      <span>
+        “Development of Beam Position Monitor (BPM) for hypernuclear experiments in high-intensity photon beam line” /
+        <a href="https://indico.rcnp.osaka-u.ac.jp/event/1640/#" target="_blank" rel="noopener noreferrer">SNP School 2021</a>
+      </span>
+    </li>
+  </ul>
+
+  <h2>セミナー</h2>
+  <ul class="awards talk-scroll">
+    <li>
+      <time>2023-09-01</time>
+      <span>
+        “1 GeV領域光子ビームプロファイルモニタの開発” /
+        <a href="https://indico.rcnp.osaka-u.ac.jp/event/2128/contributions/11718/attachments/7875/10157/SPADIA勉強会_20230901_Kino.pdf" target="_blank" rel="noopener noreferrer">pdf</a> /
+        SPADI Alliance 勉強会
+      </span>
+    </li>
+
+    <li>
+      <time>2022-07-11</time>
+      <span>
+        “Status of Kaos Spectrometer” / A1 Seminar for the A1 experiment (July 2022)
+      </span>
+    </li>
+  </ul>
+
+  <h2>その他</h2>
+  <ul class="awards talk-scroll">
+    <li>
+      <time>2024-02-08</time>
+      <span>
+        “BM4ビームライン光子モニタの高度化” / 第28回 ELPH課題採択説明会
+      </span>
+    </li>
+  </ul>
+</section>
