--- a/en/talk/index.html
+++ b/en/talk/index.html
@@ -306,7 +306,7 @@ header_size: small
     </li>
   </ul>
 
-  <h2>国際スクール</h2>
+  <h2>International School</h2>
   <ul class="awards talk-scroll">
     <li>
       <time>2024-09-26</time>
