--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,8 @@ sidebar: profile
 
 <section>
   <h2>Welcome to my home page!</h2>
-  <p>I'm Ryoko Kino.</p>
+  <p>I'm Ryoko Kino.<br>
+     This site has been recently moved. Updates and research information will be added gradually.</p>
 
   <h2>NEWS</h2>
 <ul class="news">
