--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@ sidebar: profile
 
 <section>
   <h2>Welcome to my home page!</h2>
-  <p>I'm Ryoko Kino（木野 量子）.</p>
+  <p>
+    木野 量子（Ryoko Kino）です。<br>
+    最近こちらのページに移行しました。<br>
+    今後、研究内容や活動報告などの情報を順次追加していく予定です。
+  </p>
 
   <h2>NEWS</h2>
 <ul class="news">
