--- a/en/talk/index.html
+++ b/en/talk/index.html
@@ -27,6 +27,15 @@ header_size: small
   <h2>International Conferences</h2>
   <ul class="awards talk-scroll">
     <li>
+      <time>2025-09-30</time>
+      <span>
+        “Mass Measurement of s-shell Hypernuclei via Decay Pion Spectroscopy”
+        <a href="https://indico2.riken.jp/event/5204/overview" target="_blank" rel="noopener noreferrer">indico</a> /
+        <a href="https://sites.google.com/nex.phys.s.u-tokyo.ac.jp/hyp2025" target="_blank" rel="noopener noreferrer">The 15th International Conference on Hypernuclear and Strange Particle Physics (HYP2025)</a>, The University of Tokyo, Japan 
+      </span>
+    </li>
+
+    <li>
       <time>2025-09-11</time>
       <span>
         “Precise Mass Measurement of Hypertriton via Decay Pion Spectroscopy”
