--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@ sidebar: profile
   <li>
     <time>2025-10-02</time>
     <span>
-      <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
+      2025年度第20回<a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
         ロレアル－ユネスコ女性科学者日本奨励賞
       </a>
-      を受賞しました。
+      を受賞しました。授賞式は大阪・関西万博にて実施されました。
     </span>
   </li>
 
   <li>
     <time>2025-10-01</time>
     <span>
-      所属が<a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター中間子理研ECL研究チーム</a>に変更になりました。
+      所属が<a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/" target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター中間子理研ECL研究チーム</a>に変更になりました。訪問研究員（学振特別研究員PD）として着任しました。
     </span>
   </li>
 
@@ -41,6 +41,13 @@ sidebar: profile
         HYP2025（International Conference on Hypernuclear and Strange Particle Physics）
       </a>
       で口頭発表を行いました。
+    </span>
+  </li>
+
+  <li>
+    <time>2025-09-30</time>
+    <span>
+      東北大学大学院博士後期課程を半期短縮修了しました。
     </span>
   </li>
 
