update ja index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ sidebar: profile
   <h2>NEWS</h2>
 <ul class="news">
   <li>
+    <time>2025-10-20</time>
+    <span>
+      <a href="https://www.jps.or.jp/activities/awards/gakusei/2025a_student_presentation_award.php" target="_blank" rel="noopener noreferrer">
+        第80回年次大会 日本物理学会学生優秀発表賞
+      </a>
+      を受賞しました。
+    </span>
+  </li>
+  
+<li>
     <time>2025-10-02</time>
     <span>
       2025年度第20回<a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
