update ja cv/index

--- a/cv/index.html
+++ b/cv/index.html
@@ -44,6 +44,16 @@ header_size: small
   <li>
     <time>2025-10</time>
     <span>
+      <a href="https://www.jps.or.jp/activities/awards/gakusei/2025a_student_presentation_award.php" target="_blank" rel="noopener noreferrer">
+        第80回年次大会日本物理学会学生優秀発表賞
+      </a>
+    ／「MAMIにおける崩壊パイ中間子分光法による3ΛHの質量測定実験(4)」／日本物理学会（広島大学）
+    </span>
+  </li>
+  
+  <li>
+    <time>2025-10</time>
+    <span>
       <a href="https://www.loreal.com/ja-jp/japan/press-releases/brands/fwis-20th-anniversary/" target="_blank" rel="noopener noreferrer">
         第20回ロレアル－ユネスコ女性科学者 日本奨励賞
       </a>
