update kek-jaea seminar ja only

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ sidebar: profile
   <h2>NEWS</h2>
 <ul class="news">
   <li>
+    <time>2025-10-28</time>
+    <span>
+      <a href="https://kds.kek.jp/event/57160/" target="_blank" rel="noopener noreferrer">
+        7th KEK-JAEA Joint Seminar
+      </a>
+      にてセミナートークを行いました。
+    </span>
+  </li>
+  
+  <li>
     <time>2025-10-20</time>
     <span>
       <a href="https://www.jps.or.jp/activities/awards/gakusei/2025a_student_presentation_award.php" target="_blank" rel="noopener noreferrer">
