--- a/talk/index.html
+++ b/talk/index.html
@@ -379,6 +379,16 @@ header_size: small
   <h2>セミナー</h2>
   <ul class="awards talk-scroll">
     <li>
+      <time>2025-10-28</time>
+      <span>
+        “Precise measurement of hypertriton binding energy via decay pion spectroscopy at MAMI” /
+        <a href="https://kds.kek.jp/event/57160/" target="_blank" rel="noopener noreferrer">indico</a> /
+        7th KEK-JAEA Joint Seminar / 東海１号館
+      </span>
+    </li>
+
+  <ul class="awards talk-scroll">
+    <li>
       <time>2023-09-01</time>
       <span>
         “1 GeV領域光子ビームプロファイルモニタの開発” /
