update E72, J-PARC Hadron, only JP

--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@ sidebar: profile
 
   <h2>NEWS</h2>
 <ul class="news">
-  <li>
-    <time>2025-10-28</time>
+  <li>  
+   <time>2025-12-18</time>
+    <span>
+      <a href="https://kds.kek.jp/event/54304/" target="_blank" rel="noopener noreferrer">
+        International workshop on J-PARC hadron physics 2025 (J-PARC Hadron 2025)
+      </a>
+      にて招待講演を行いました。
+    </span>
+  </li>
+ 
+   <li>
+    <time>2025-11-25</time>
+    <span>
+     J-PARCハドロン実験施設において行われたE72実験に参加しました。 
+    </span>
+  </li>
+  
+  <li>  
+   <time>2025-10-28</time>
     <span>
       <a href="https://kds.kek.jp/event/57160/" target="_blank" rel="noopener noreferrer">
         7th KEK-JAEA Joint Seminar
